--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suhaib - Fullstack Web Developer</title>
-    <meta name="description" content="Passionate Fullstack Web developer from Bangladesh, crafting seamless digital experiences with modern technologies." />
-    <meta name="author" content="Suhaib" />
+    <title>Mubarek - Fullstack Web Developer</title>
+    <meta
+      name="description"
+      content="Passionate Fullstack Web developer from Ethiopia, crafting seamless digital experiences with modern technologies."
+    />
+    <meta name="author" content="Mubarek" />
 
-    <meta property="og:title" content="Suhaib - Fullstack Web Developer" />
-    <meta property="og:description" content="Passionate Fullstack Web developer from Bangladesh, crafting seamless digital experiences with modern technologies." />
+    <meta property="og:title" content="Mubarek - Fullstack Web Developer" />
+    <meta
+      property="og:description"
+      content="Passionate Fullstack Web developer from Ethiopia, crafting seamless digital experiences with modern technologies."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icons/Favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Mubarek" />
+    <meta name="twitter:image" content="/icons/Favicon.svg" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="/fonts/fonts.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="/fonts/fonts.css" rel="stylesheet" />
   </head>
 
   <body>
